Fix various z-index issues

--- a/puppetplays-web/components/layout.module.scss
+++ b/puppetplays-web/components/layout.module.scss
@@ -24,7 +24,7 @@
   @media (max-width: 899px) {
     position: absolute;
     box-shadow: 0 0 12px rgba(0, 0, 0, 0.25);
-    z-index: 2000;
+    z-index: var(--z-index-aside);
     top: 0;
     bottom: 0;
     left: 0;
